fix: fixed verified icon spacing

--- a/frontend/src/components/post/post.scss
+++ b/frontend/src/components/post/post.scss
@@ -86,7 +86,7 @@
           width: 18px;
           position: absolute;
           top: -1px;
-          right: 10px;
+          right: 5px;
           height: 20px;
         }
       }
